--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,15 @@ h3{
     margin-top: 5px;
     text-decoration: underline;
 }
+.text-xl{
+    font-size: 70px;
+    font-weight: bold;
+}
+.sub-text{
+    max-width: 850px;
+    margin-bottom: 10px;
+    font-size: 24px;
+}
 /* header */
 .header{
     height: 530px;
@@ -84,6 +93,8 @@ h3{
     display: flex;
     justify-content: flex-end;
     padding: 20px 40px;
+    z-index: 2;
+    position: relative; /* in order to use z-index, attribute position need to be used */
 }
 .header nav .login-btn{
     cursor: pointer;
@@ -113,6 +124,21 @@ h3{
     font-size: 22px;
     margin: 25px 0;
 }
+.header::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 180px;
+    z-index: 1;
+    background: linear-gradient(
+        180deg,
+        rgba(0,0,0,0.76) 15.54%,
+        rgba(0,0,0,0.192) 60.23%,
+        rgba(0,0,0,8e-5) 100%
+    ); 
+}
 /* sub header */
 .sub-header{
     display: grid;
@@ -134,9 +160,66 @@ h3{
 .sub-header .get-bundle .sub-link{
     text-align: center;
 }
+/* categories */
+.categories{
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* to align elements vertically */
+    text-align: center;
+    padding: 90px 40px;
+    justify-content: center; /* to align elements horizontally */
+}
+.categories .covers{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-top: 40px;
+    gap: 20px; /* gap between elements in grid */
+}
+.categories .covers > div{
+    height: 500px;
+    width: 300px;
+    position: relative;
+}
+.categories .cover-grad{
+    position: absolute;
+    top: 0; 
+    left: 0;    
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        156.82deg,
+        rgba(0,0,0,0.6) 4.58%,
+        rgba(0,0,0,0) 69.61%
+    ),
+    linear-gradient(24.5deg, rgba(0,0,0,0,2) 4.71%, rgba(0,0,0,0) 71.49%); 
+
+}
+.categories .cover-text{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    text-align: left;
+}
+.categories .cover-1{
+    background: url("../img/cover-1.jpg") no-repeat center center / cover;
+}
+.categories .cover-2{
+    background: url("../img/cover-2.jpg") no-repeat center center / cover;
+}
+.categories .cover-3{
+    background: url("../img/cover-3.jpg") no-repeat center center / cover;
+}
+.categories .cover-4{
+    background: url("../img/cover-4.jpg") no-repeat center center / cover;
+}
 
 /* media queries */
 /* anything under under this size will take effect */
+@media(max-width:1100px){
+.categories .covers{
+    grid-template-columns: 1fr 1fr;
+}
+}
 @media(max-width: 768px){
     .header .logo{
         width: 200px;
@@ -163,5 +246,15 @@ h3{
     .sub-header .get-bundle{
         justify-self: center;
         align-self: center;
+    }
+    .text-xl{
+        line-height: 1.3;
+        font-size: 40px;
+    }
+    .sub-text{
+        font-size: 20px;
+    }
+    .categories .covers{
+        grid-template-columns: 1fr;
     }
 }
