--- a/css/style.css
+++ b/css/style.css
@@ -213,12 +213,99 @@ h3{
     background: url("../img/cover-4.jpg") no-repeat center center / cover;
 }
 
+/* Live */
+.live{
+    background: #151516;
+    padding: 40px;
+}
+.live-border{
+    border: 4px solid #1ce783;
+    border-radius: 16px;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.live a{
+    text-transform: uppercase;
+    font-size: 18px;
+    margin-top: 20px;
+    text-decoration: underline;
+}
+/* live sports */
+.live-sport{
+    background: url(../img/live-sports.jpg) no-repeat center center / cover;
+    height: 800px;
+    position: relative;
+
+}
+.live-sport-content{
+    position: absolute;
+    top: 160px;
+    left: 100px;
+    max-width: 550px;
+}
+.live-sport-logos{
+    width: 300px;
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.live-sport-logos > div{
+    background: url(../img/network-logo-bg.png) no-repeat center center / cover;
+    height: 60px;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.live-sport-logos img{
+    width: 40px;
+}
 /* media queries */
 /* anything under under this size will take effect */
 @media(max-width: 1100px){
 .categories .covers{
     grid-template-columns: 1fr 1fr;
 }
+}
+
+/* footer */
+.footer{
+    background: #ebedf2;
+    color: #333;
+
+}
+.footer a{
+    color: #333;
+}
+.footer-container{
+    max-width: 1100px;
+    margin: auto;
+    padding: 40px;
+}
+.footer-list{
+    display: flex;
+    justify-content: space-between;
+}
+.footer-list .list-head{
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.divider{
+    width: 100%;
+    height: 3px;
+    border-top: 1px #ccc solid;
+    margin: 30px 0;
+}
+.social-icons img{
+    width: 25px;
+    height: 25px;
+    margin-right: 25px;
 }
 @media(max-width: 768px){
     .header .logo{
@@ -256,5 +343,19 @@ h3{
     }
     .categories .covers{
         grid-template-columns: 1fr;
+    }
+    .live-border{
+        padding: 30px 10px;
+    }
+    .live-sports{
+        background: url(../img/live-sports-small.jpg) no-repeat center center/cover;
+    }
+    .live-sport-content{
+        top: 30px;
+        left: 30px;
+        margin-top: 60px;
+    }
+    .footer-list{
+        flex-direction: column;
     }
 }
